--- a/kadry.html
+++ b/kadry.html
@@ -5,136 +5,162 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Panel Kadrowy</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 30px; background: #fff; }
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f8f9fa; }
     h2 { margin-top: 40px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 10px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    input, select, button { margin: 5px; padding: 5px; }
+    table, th, td { border: 1px solid #ccc; border-collapse: collapse; padding: 8px; }
+    table { width: 100%; margin-top: 10px; }
+    input, select, button { margin: 5px 0; padding: 6px; }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
   <h1>Panel Kadrowy</h1>
-  <p id="welcome"></p>
 
-  <div id="adminSection" style="display:none">
+  <div id="admin-panel" class="hidden">
     <h2>Dodaj pracownika</h2>
-    <input type="text" id="newName" placeholder="Imię i nazwisko" />
-    <select id="managerSelect"></select>
-    <button onclick="dodajPracownika()">Dodaj</button>
+    <input type="text" id="imieNazwisko" placeholder="Imię i nazwisko" />
+    <select id="przelozony">
+      <option value="">Wybierz menedżera</option>
+    </select>
+    <button onclick="dodajPracownika()">Dodaj pracownika</button>
 
     <h2>Lista pracowników</h2>
-    <table id="listaPracownikow"></table>
+    <table id="tabelaPracownikow">
+      <thead>
+        <tr><th>Imię i nazwisko</th><th>Menedżer</th><th>Dni urlopowe</th><th>Akcje</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <h2>Dodani menedżerowie</h2>
+    <table>
+      <thead><tr><th>Imię i nazwisko</th><th>Login</th><th>Hasło</th></tr></thead>
+      <tbody id="tabelaMenedzerow"></tbody>
+    </table>
   </div>
 
-  <h2>Wnioski urlopowe</h2>
-  <table id="tabelaWnioskow"></table>
+  <div id="wnioski-panel" class="hidden">
+    <h2>Wnioski urlopowe</h2>
+    <table id="tabelaWnioskow">
+      <thead><tr><th>Pracownik</th><th>Od</th><th>Do</th><th>Liczba dni</th><th>Status</th><th>Akcja</th></tr></thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
   <script>
-    const staliMenedzerowie = [
-      { login: "ppisarczyk", imie: "Pisarczyk Paweł", haslo: "haslo111" },
-      { login: "hwroblewski", imie: "Wróblewski Hubert", haslo: "haslo112" },
-      { login: "dnowikow", imie: "Nowikow Dariusz", haslo: "haslo113" },
-      { login: "dszmulik", imie: "Szmulik Damian", haslo: "haslo114" },
-      { login: "pnurzynski", imie: "Nurzyński Paweł", haslo: "haslo115" },
-      { login: "edusinska", imie: "Ewa Dusińska", haslo: "haslo116" }
+    const MENEDZEROWIE_STALI = [
+      { imie: "Pisarczyk Paweł", login: "ppisarczyk", haslo: "haslo111" },
+      { imie: "Wróblewski Hubert", login: "hwroblewski", haslo: "haslo112" },
+      { imie: "Nowikow Dariusz", login: "dnowikow", haslo: "haslo113" },
+      { imie: "Szmulik Damian", login: "dszmulik", haslo: "haslo114" },
+      { imie: "Nurzyński Paweł", login: "pnurzynski", haslo: "haslo115" },
+      { imie: "Ewa Dusińska", login: "edusinska", haslo: "haslo116" }
     ];
 
-    const login = sessionStorage.getItem("login");
+    let pracownicy = JSON.parse(localStorage.getItem("pracownicy")) || [];
+    let wnioski = JSON.parse(localStorage.getItem("wnioski")) || [];
     const rola = sessionStorage.getItem("rola");
+    const login = sessionStorage.getItem("login");
 
-    if (!login || !rola) {
-      alert("Brak dostępu. Zaloguj się jako menedżer.");
-      window.location.href = "kadry_login.html";
+    function zapisz() {
+      localStorage.setItem("pracownicy", JSON.stringify(pracownicy));
+      localStorage.setItem("wnioski", JSON.stringify(wnioski));
     }
 
-    const pracownicy = JSON.parse(localStorage.getItem("pracownicy") || "[]");
-    const wnioski = JSON.parse(localStorage.getItem("wnioski") || "[]");
+    function init() {
+      if (rola === "admin") {
+        document.getElementById("admin-panel").classList.remove("hidden");
+        document.getElementById("wnioski-panel").classList.remove("hidden");
+        wypelnijPracownikow();
+        wypelnijMenedzerow();
+        wypelnijSelectMenedzerow();
+        wypelnijWnioski();
+      } else if (rola === "menedzer") {
+        document.getElementById("wnioski-panel").classList.remove("hidden");
+        wypelnijWnioski();
+      } else {
+        alert("Brak dostępu. Zaloguj się jako menedżer lub administrator.");
+        window.location.href = "kadry_login.html";
+      }
+    }
 
-    document.getElementById("welcome").innerText =
-      rola === "admin"
-        ? `Zalogowano jako ADMIN`
-        : `Zalogowano jako: ${staliMenedzerowie.find(m => m.login === login)?.imie || login}`;
+    function wypelnijMenedzerow() {
+      const tbody = document.getElementById("tabelaMenedzerow");
+      tbody.innerHTML = "";
+      MENEDZEROWIE_STALI.forEach(m => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `<td>${m.imie}</td><td>${m.login}</td><td>${m.haslo}</td>`;
+        tbody.appendChild(tr);
+      });
+    }
 
-    if (rola === "admin") {
-      document.getElementById("adminSection").style.display = "block";
-      const select = document.getElementById("managerSelect");
-      staliMenedzerowie.forEach(m => {
-        const opt = document.createElement("option");
-        opt.value = m.login;
-        opt.textContent = m.imie;
-        select.appendChild(opt);
+    function wypelnijSelectMenedzerow() {
+      const select = document.getElementById("przelozony");
+      MENEDZEROWIE_STALI.forEach(m => {
+        const option = document.createElement("option");
+        option.value = m.login;
+        option.textContent = m.imie;
+        select.appendChild(option);
+      });
+    }
+
+    function wypelnijPracownikow() {
+      const tbody = document.querySelector("#tabelaPracownikow tbody");
+      tbody.innerHTML = "";
+      pracownicy.forEach((p, i) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `<td>${p.nazwisko}</td><td>${p.menedzer}</td><td>${p.dni || 20}</td><td><button onclick="usunPracownika(${i})">Usuń</button></td>`;
+        tbody.appendChild(tr);
+      });
+    }
+
+    function wypelnijWnioski() {
+      const tbody = document.querySelector("#tabelaWnioskow tbody");
+      tbody.innerHTML = "";
+      const widoczneWnioski = rola === "admin" ? wnioski : wnioski.filter(w => {
+        const p = pracownicy.find(p => p.nazwisko === w.pracownik);
+        return p && p.menedzer === login;
+      });
+      widoczneWnioski.forEach((w, i) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `<td>${w.pracownik}</td><td>${w.od}</td><td>${w.do}</td><td>${w.ile}</td><td>${w.status}</td><td>
+        <button onclick="akceptujWniosek(${i})">Akceptuj</button>
+        <button onclick="odrzucWniosek(${i})">Odrzuć</button></td>`;
+        tbody.appendChild(tr);
       });
     }
 
     function dodajPracownika() {
-      const name = document.getElementById("newName").value.trim();
-      const manager = document.getElementById("managerSelect").value;
-      if (!name || !manager) return;
-      pracownicy.push({ nazwisko: name, menedzer: manager, dni: 20 });
-      localStorage.setItem("pracownicy", JSON.stringify(pracownicy));
-      pokazPracownikow(); pokazWnioski(); document.getElementById("newName").value = "";
-    }
-
-    function pokazPracownikow() {
-      const table = document.getElementById("listaPracownikow");
-      table.innerHTML = "<tr><th>Imię i nazwisko</th><th>Menedżer</th><th>Dni urlopu</th><th>Usuń</th></tr>";
-      pracownicy.forEach((p, i) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${p.nazwisko}</td>
-          <td>${staliMenedzerowie.find(m => m.login === p.menedzer)?.imie || p.menedzer}</td>
-          <td><input type='number' min='0' value='${p.dni}' onchange='zmienDni(${i}, this.value)' /></td>
-          <td><button onclick='usunPracownika(${i})'>Usuń</button></td>`;
-        table.appendChild(tr);
-      });
-    }
-
-    function zmienDni(i, val) {
-      pracownicy[i].dni = parseInt(val);
-      localStorage.setItem("pracownicy", JSON.stringify(pracownicy));
+      const nazwisko = document.getElementById("imieNazwisko").value;
+      const menedzer = document.getElementById("przelozony").value;
+      if (!nazwisko || !menedzer) return alert("Wypełnij wszystkie pola");
+      pracownicy.push({ nazwisko, menedzer, dni: 20 });
+      zapisz();
+      wypelnijPracownikow();
+      alert("Dodano pracownika");
     }
 
     function usunPracownika(i) {
-      pracownicy.splice(i, 1);
-      localStorage.setItem("pracownicy", JSON.stringify(pracownicy));
-      pokazPracownikow(); pokazWnioski();
+      if (confirm("Na pewno chcesz usunąć pracownika?")) {
+        pracownicy.splice(i, 1);
+        zapisz();
+        wypelnijPracownikow();
+      }
     }
 
-    function pokazWnioski() {
-      const table = document.getElementById("tabelaWnioskow");
-      table.innerHTML = "<tr><th>Pracownik</th><th>Od</th><th>Do</th><th>Dni</th><th>Status</th><th>Akcja</th></tr>";
-      wnioski.forEach((w, i) => {
-        const prac = pracownicy.find(p => p.nazwisko === w.nazwisko);
-        if (!prac) return;
-        if (rola !== "admin" && prac.menedzer !== login) return;
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${w.nazwisko}</td>
-          <td>${w.od}</td>
-          <td>${w.do}</td>
-          <td>${w.dni}</td>
-          <td>${w.status || "Oczekuje"}</td>
-          <td>
-            <button onclick='akceptuj(${i})'>✅</button>
-            <button onclick='odrzuc(${i})'>❌</button>
-          </td>`;
-        table.appendChild(tr);
-      });
+    function akceptujWniosek(i) {
+      wnioski[i].status = "✅ zaakceptowany";
+      zapisz();
+      wypelnijWnioski();
     }
 
-    function akceptuj(i) {
-      wnioski[i].status = "Zaakceptowano";
-      localStorage.setItem("wnioski", JSON.stringify(wnioski));
-      pokazWnioski();
-    }
-    function odrzuc(i) {
-      wnioski[i].status = "Odrzucono";
-      localStorage.setItem("wnioski", JSON.stringify(wnioski));
-      pokazWnioski();
+    function odrzucWniosek(i) {
+      wnioski[i].status = "❌ odrzucony";
+      zapisz();
+      wypelnijWnioski();
     }
 
-    pokazPracownikow();
-    pokazWnioski();
+    window.onload = init;
   </script>
 </body>
 </html>
